# DedustSwaps

./: pyproject.toml
SystemD/: serive
src/: main.py
src/data/: config.py
src/database/: connection.py  create.py  process.py
src/handlers/: __init__.py
src/handlers/private/: __init__.py  start.py  transaction.py
src/keyboards/: common.py
src/models/all_rates/: get.py  set.py
src/models/jetton_rate/: get.py  set.py
src/models/jettons_info/: get.py
src/service/: APScheduler.py  newsletter.py
src/service/jettons/: api.py  process.py
src/utils/: APScheduler.py  logging.py
src/utils/jettons/: api.py
